--- a/Frontend/healthviz/src/App.scss
+++ b/Frontend/healthviz/src/App.scss
@@ -6,4 +6,9 @@
     width: 100%;
     height: 100vh;
     position: relative;
+
+    a {
+        text-decoration: none;
+        color: unset;
+    }
 }
