--- a/Frontend/healthviz/src/components/Menu/Menu.scss
+++ b/Frontend/healthviz/src/components/Menu/Menu.scss
@@ -2,7 +2,7 @@
 
 .menu {
     @include display-flex(row, center, space-around);
-    position: fixed;
+    position: absolute;
     bottom: 0;
     left: 0;
     right: 0;
