--- a/Frontend/healthviz/src/components/Menu/Menu.scss
+++ b/Frontend/healthviz/src/components/Menu/Menu.scss
@@ -2,19 +2,21 @@
 
 .menu {
     @include display-flex(row, center, space-around);
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
-    height: 80px;
+    height: 60px;
     border-top: 1px solid rgba(0, 0, 0, 0.2);
+    background-color: #ffffff;
+    z-index: 1;
 
     .menu-item {
         @include display-flex(column, center, center);
 
         &__icon {
-            width: 30px;
-            height: 30px;
+            width: 25px;
+            height: 25px;
         }
 
         &__description {
@@ -24,8 +26,8 @@
 
         &.selected {
             .menu-item__icon {
-                width: 40px;
-                height: 40px;
+                width: 30px;
+                height: 30px;
             }
 
             .menu-item__description {
