--- a/Frontend/healthviz/src/components/generics/Button/Button.scss
+++ b/Frontend/healthviz/src/components/generics/Button/Button.scss
@@ -40,6 +40,10 @@ $shadow: 0 7px 14px rgba(0, 0, 0, 0.18),
         }
     }
 
+    .huge {
+        width: $huge-width;
+    }
+
     .big {
         width: $big-width;
     }
