--- a/Frontend/healthviz/src/scenes/Dashboard/Dashboard.scss
+++ b/Frontend/healthviz/src/scenes/Dashboard/Dashboard.scss
@@ -6,7 +6,7 @@
     height: 100%;
 
     &-content {
-        margin-top: 50px;
+        margin: 50px 0 110px 0;
         font-size: $default-size-font;
     }
 }
