--- a/Frontend/healthviz/src/scenes/Patients/Patients.scss
+++ b/Frontend/healthviz/src/scenes/Patients/Patients.scss
@@ -1,34 +1,29 @@
 @import './src/assets/styles/variables';
 
-.patient {
+.patients {
     @include display-flex(column, center, center);
-    height: 100%;
     margin: 0 10%;
 
-    &__informations {
-        @include display-flex(column, center, center);
-        font-weight: $bold-font;
+    &__header {
+        @include display-flex(row, center, space-between);
+        width: 100%;
+        margin: 0 0 20px 0;
 
-        .name {
+        .title {
+            color: $color-secondary;
             font-size: $big-size-font;
-            margin: 0 0 10px 0;
+            margin: 0;
         }
 
-        .info {
-            margin-bottom: 5px;
-
-            &__description {
-                color: $color-secondary;
-            }
-
-            &__content {
-                margin-left: 10px;
-            }
+        .filter-icon {
+            width: 24px;
+            height: 24px;
         }
     }
 
     &__graphs {
         @include display-flex(row, center, space-around);
+        width: 100%;
         margin-top: 30px;
         flex-wrap: wrap;
 
